--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,9 @@ target/
 downloaded/
 geoserver/
 uploaded/
+static_root/
 development.db
 development.db-journal
 ddug_geonode/local_settings.py
+
 
